[gd_scene load_steps=11 format=3 uid="uid://dgp0kbar5fk1j"]

[ext_resource type="Texture2D" uid="uid://cgpd5nb330w3p" path="res://assets/bg.png" id="1_8v0mo"]
[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_uxks8"]
[ext_resource type="Texture2D" uid="uid://ciy6iafvbsp8w" path="res://assets/UI/title.png" id="2_gxa1r"]
[ext_resource type="Texture2D" uid="uid://c1j3000t1bcqk" path="res://assets/UI/button_start_base.png" id="2_ndna3"]
[ext_resource type="Texture2D" uid="uid://d04wpgyny8a5i" path="res://assets/player_2.png" id="3_8x3yp"]
[ext_resource type="Texture2D" uid="uid://cx0enb4nth84b" path="res://assets/UI/button_exit_base.png" id="4_lqmip"]
[ext_resource type="Texture2D" uid="uid://c04lqk1qvnoqt" path="res://assets/UI/button_start_hover.png" id="4_ysthi"]
[ext_resource type="Texture2D" uid="uid://c0d0enc5vx7di" path="res://assets/UI/button_controls_base.png" id="5_wnb5m"]
[ext_resource type="Texture2D" uid="uid://c66t7vsqh62n1" path="res://assets/UI/button_controls_hover.png" id="6_7lqmo"]
[ext_resource type="Texture2D" uid="uid://bnenla2gbdcee" path="res://assets/UI/button_exit_hover.png" id="8_iblvc"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uxks8")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_8v0mo")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_gxa1r")
stretch_mode = 5

[node name="Placeholder" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_8x3yp")
stretch_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 110
alignment = 1

[node name="ControlsMenuButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_wnb5m")
texture_hover = ExtResource("6_7lqmo")

[node name="StartMenuButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_ndna3")
texture_hover = ExtResource("4_ysthi")

[node name="ExitMenuButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_lqmip")
texture_hover = ExtResource("8_iblvc")

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ControlsMenuButton" to="." method="_on_controls_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/StartMenuButton" to="." method="_on_start_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ExitMenuButton" to="." method="_on_exit_menu_button_pressed"]
